--- a/AboutStyles.css
+++ b/AboutStyles.css
@@ -1,10 +1,16 @@
 @charset "utf-8";
 /*
     Timothy C Masserant
-	Project V2
-	2/13/21
+	Project V3
+	2/20/21
 	Filename: AboutStylesstyles.css
 */
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  }
 body{
     background-color: rgb(41, 38, 38);
    
@@ -21,4 +27,12 @@ body > header{
 a:link{
     text-decoration: none;
 
+}
+ul.submenu
+{
+    display: none;
+}
+a.submenuTitle:hover+ul.submenu, ul.submenu:hover
+{
+    display: block;
 }
