--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 @charset "utf-8";
 /*
     Timothy C Masserant
-	Project V2
-	2/13/21
+	Project V3
+	2/20/21
 	Filename: styles.css
 */
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+      width: 100%;
+    }
+  }
 html, body
 {
     padding: 0%;
@@ -27,7 +33,13 @@ header
     background-color: rgb(41, 38, 38);
     
 }
-
+body > div 
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 a
 {
     font-size: large;
@@ -90,3 +102,17 @@ div > p
     /*Sets the down the page element into a grid seperating each line in the row by 10 pixels
     and the first percentage value in the colums element moving the text to the center of the grid*/
 }
+ul.submenu
+{
+    display: none;
+}
+a.submenuTitle:hover+ul.submenu, ul.submenu:hover
+{
+    display: block;
+}
+footer
+{
+    position: fixed;
+    width: 100%;
+}
+
