--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 	Filename: styles.css
 */
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
+    /* Format for mobile phones: */
     [class*="col-"] {
       width: 100%;
     }
